--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,11 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Todo App" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<!-- <link rel="apple-touch-icon" href="./logo192.png" /> -->
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!-- <link rel="manifest" href="./manifest.json" /> -->
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -41,10 +39,9 @@
 	<script>
 		if ('serviceWorker' in navigator) {
 			window.addEventListener('load', () => {
+				console.log('serviceWorker custom');
 				navigator.serviceWorker
-					.register('./serviceworker.js', {
-						// scope: '.', // <--- THIS BIT IS REQUIRED
-					})
+					.register('./my-serviceworker.js')
 					.then((reg) => console.log('Success: ', reg.scope))
 					.catch((err) => console.log('Failure: ', err));
 			});
