--- a/public/offline.html
+++ b/public/offline.html
@@ -37,7 +37,7 @@
 	<body>
 		<div class="city">
 			<h2 class="city-name">
-				<span>Please go to online.</span>
+				<span>Please go to online 1.</span>
 			</h2>
 		</div>
 	</body>
