--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     --></body>
-	<script>
+	<!-- <script>
 		if ('serviceWorker' in navigator) {
 			window.addEventListener('load', () => {
 				console.log('serviceWorker custom');
@@ -46,5 +46,5 @@
 					.catch((err) => console.log('Failure: ', err));
 			});
 		}
-	</script>
+	</script> -->
 </html>
